--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.23",
     "tailwindcss": "^3.3.2",
-    "vite": "^4.3.5"
+    "vite": "^4.3.5",
+    "vue-i18n": "^9.2.2"
   }
 }
