--- a/.gitignore
+++ b/.gitignore
@@ -13,7 +13,6 @@ dist
 dist-ssr
 coverage
 *.local
-TODO.txt
 
 /cypress/videos/
 /cypress/screenshots/
@@ -27,3 +26,4 @@ TODO.txt
 *.njsproj
 *.sln
 *.sw?
+*.txt
