--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@vitejs/plugin-vue": "^4.2.3",
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.23",
+    "sass": "^1.62.1",
     "tailwindcss": "^3.3.2",
     "vite": "^4.3.5",
     "vue-i18n": "^9.2.2"
