--- a/package.json
+++ b/package.json
@@ -5,13 +5,19 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "start-server": "node express-server/server.js",
+    "start": "concurrently \"npm run dev\" \"npm run start-server\""
   },
   "dependencies": {
-    "@auth0/auth0-vue": "^2.2.0",
+    "@formkit/vue": "^0.17.2",
+    "axios": "^1.4.0",
+    "firebase": "^9.22.1",
     "pinia": "^2.0.36",
+    "sweetalert2": "^11.4.8",
     "vue": "^3.3.2",
-    "vue-router": "^4.2.0"
+    "vue-router": "^4.2.0",
+    "wc-toast": "^1.2.9"
   },
   "devDependencies": {
     "@headlessui/vue": "^1.7.13",
@@ -20,6 +26,7 @@
     "@tailwindcss/line-clamp": "^0.4.4",
     "@vitejs/plugin-vue": "^4.2.3",
     "autoprefixer": "^10.4.14",
+    "concurrently": "^8.0.1",
     "postcss": "^8.4.23",
     "sass": "^1.62.1",
     "tailwindcss": "^3.3.2",
